add: demo app, related dockerfile, and helm file structure

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,11 @@ terraform/modules/modules.json
 *.swp
 *.swo
 
+# App
+assignment-part-2/app/node_modules
+assignment-part-2/app/package-lock.json
+
+
 # OS
 .DS_Store
 Thumbs.db
