track: package.lock

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -281,6 +281,7 @@ jobs:
     - name: 🚀 Terraform Apply
       working-directory: ./terraform
       run: |
+        # terraform apply -auto-approve
         echo "✅ Infrastructure deployed successfully"
 
     - name: 📋 Save Terraform Outputs
