--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -253,7 +253,7 @@ jobs:
     name: 🚀 Deploy Infrastructure
     runs-on: ubuntu-latest
     needs: [terraform-validate, security-scan]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/feature/security'
     environment: 
       name: production
       url: https://aws.amazon.com/console
@@ -301,7 +301,7 @@ jobs:
     name: 🚢 Deploy to EKS
     runs-on: ubuntu-latest
     needs: [build-and-push, terraform-apply]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/feature/security'
     environment:
       name: production
       url: http://hello-app.local
